<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layer_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_easter_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/margin_30dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/strMonsterDesc7"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize1" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/strMonsterDesc8"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize3" />

        <Button
            android:id="@+id/button_view_monster"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:background="@drawable/bg_round5_yellow"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize4"
            android:text="@string/view_monsters"
            android:onClick="onViewMonster" />

         <TextView
            android:id="@+id/txt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_view_monster"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_30dp"            
            android:gravity="center"
            android:text="@string/strEggFoundAllContent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize3"/>
         
        <ImageView
            android:id="@+id/img_monster"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/txt_content"
            android:layout_below="@id/txt_desc"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/monster_flay" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/icon_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:contentDescription="@string/app_name"
        android:onClick="onClose"
        android:src="@drawable/monster_icon_close" />

</RelativeLayout>