<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layer_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/header_bg" >

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:onClick="onBackActivity"
            android:scaleType="center"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/txt_headertitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Hi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_title" />

        <ImageView
            android:id="@+id/icon_more"
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:onClick="onMore"
            android:scaleType="center"
            android:src="@drawable/icon_hamburger" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainlist_bg2"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layer_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_offerphoto"
                    android:layout_width="fill_parent"
                    android:scaleType="fitXY"
                    android:layout_height="145dp"
                    android:src="@drawable/default_wide"
                    android:contentDescription="@string/app_name" />

                
                
				<RelativeLayout 
				    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    
				    <TextView
	                    android:id="@+id/txt_offertitle"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:paddingBottom="@dimen/margin_small"
	                    android:paddingLeft="@dimen/margin_medium"
	                    android:paddingRight="@dimen/margin_medium"
	                    android:paddingTop="@dimen/margin_normal"
	                    android:text="@string/stroffer_title"
	                    android:textColor="@color/font_color2"
	                    android:textSize="@dimen/fontsize2"/>
				    
	                <TextView
	                    android:id="@+id/txt_description"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:autoLink="web"
	                    android:paddingBottom="@dimen/margin_normal"
	                    android:paddingLeft="@dimen/margin_medium"
	                    android:paddingRight="@dimen/margin_medium"
	                    android:text="@string/stroffer_desc1"
	                    android:textColor="@color/font_color3"
	                    android:textSize="@dimen/fontsize5"
	                    android:layout_below="@id/txt_offertitle"
	                    />

	               <LinearLayout
	                    android:id="@+id/view_redeem"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="@dimen/margin_medium"
	                    android:layout_marginLeft="@dimen/margin_medium"
	                    android:layout_marginRight="@dimen/margin_medium"
	                    android:layout_below="@id/txt_description"
	                    android:orientation="vertical" >
	                    </LinearLayout>
	                
	                <ImageView
			            android:id="@+id/back_redeem_top"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:layout_marginLeft="@dimen/margin_small"
			            android:layout_marginRight="@dimen/margin_small"
			            android:layout_alignBottom="@id/view_redeem"
			            android:layout_marginBottom="60dp"
			            android:background="@drawable/back_redeem_top"
			            android:visibility="invisible"
			            />
	                
		          </RelativeLayout>
                   
                <LinearLayout
                    android:id="@+id/view_retailer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/tbtn_laptop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@color/header_bg"
                    android:drawableLeft="@drawable/icon_map"
                    android:drawablePadding="@dimen/margin_small"
                    android:gravity="left|center_vertical"
                    android:padding="@dimen/margin_normal"
                    android:textColor="@android:color/white"
                    android:text="@string/stroffer_viewstore"
                    android:textSize="@dimen/fontsize4" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainlist_bg2"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small" >

                    <TextView
                        android:id="@+id/txt_moreoffer" 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/strofferdetail_moreoffer"
                        android:textColor="@color/font_color2"
                        android:textSize="@dimen/fontsize1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>